<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".Subscribe">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select one or more categories you like."
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/amaranth"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Solids"
        android:textColor="@android:color/white"
        android:fontFamily="@font/amaranth"
        android:textSize="20dp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vegetable"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
        <CheckBox
            android:id="@+id/subC2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fruit"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cake"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
        <CheckBox
            android:id="@+id/subC4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bread"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15sp"
        android:fontFamily="@font/amaranth"
        android:text="Liquids"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:layout_marginTop="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/softDrink"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
        <CheckBox
            android:id="@+id/subC7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/coldDrink"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/juice"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
        <CheckBox
            android:id="@+id/subC9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/milkshake"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/water"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
        <CheckBox
            android:id="@+id/subC11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/milk"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Semi-Solids"
        android:textColor="@android:color/white"
        android:fontFamily="@font/amaranth"
        android:textSize="20dp"
        android:layout_marginBottom="15sp"
        android:layout_marginTop="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pudding"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
        <CheckBox
            android:id="@+id/subC13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/iceCream"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sauce"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
        <CheckBox
            android:id="@+id/subC15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jam"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subC16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/butter"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:fontFamily="@font/amaranth"
            />

    </LinearLayout>
    <Button
        android:id="@+id/subButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="subscribe" />
</LinearLayout>